# fishbot_multirobot_sim

./: README.md  docker-compose.yml  说明.md
docker/: Dockerfile.navigation
src/gazebo_sim/: CMakeLists.txt  package.xml
src/gazebo_sim/launch/: quick.launch.py  spawn_robots.launch.py
src/gazebo_sim/robots/sjtu_drone_gz/config/: sjtu_drone_gz.yaml
src/gazebo_sim/robots/sjtu_drone_gz/urdf/: sjtu_drone_gz.xacro
src/mpc_control/: package.xml  setup.py
src/mpc_control/launch/: mpc_control.launch.py
src/mpc_control/mpc_control/: Controller.py  mpc_drone_control.py  robot_3D.py
src/navigation_msgs/: CMakeLists.txt  package.xml
src/navigation_msgs/msg/: GMM.msg
src/rover3d_navigation/: CMakeLists.txt  README.md  package.xml
src/rover3d_navigation/config/: GC_covs_3D.json  GC_means_3D.json  Graph_GC_3D.npy  Node_PDF_table_3D.npy  Wasserstein_table_3D.npy  gmm_goal_publisher.yaml  navigation.yaml  planning_apf.yaml
src/rover3d_navigation/include/rover3d_navigation/: CVaR_SDF_constraint_3D.py  Planning_3D.py  ROVER_3D.py  __init__.py  control_law_3D.py  esdf_adapter.py  init_Graph_CVaR_3D.py  init_scene_3D.py
src/rover3d_navigation/launch/: navigation.launch.py  planning_apf.launch.py
src/rover3d_navigation/scripts/: precompute_config_prior.py
src/rover3d_navigation/src/: gmm_goal_publisher_node.py  navigator.py  planning_apf_node.py
