<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover3d_navigation</name>
  <version>0.1.0</version>
  <description>Per-robot navigation nodes that accept RViz goals and drive Fishbot agents.</description>
  <maintainer email="artem.voronov@skoltech.ru">Artem Voronov</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>esdf_map</depend>
  <depend>navigation_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <depend>python3-numpy</depend>
  <depend>python3-pandas</depend>
  <depend>python3-networkx</depend>
  <depend>python3-scipy</depend>
  <depend>python3-sklearn</depend>
  <depend>python3-qpsolvers-pip</depend>
  <depend>python3-shapely</depend>
  <depend>python3-tqdm</depend>
  <depend>python3-matplotlib</depend>
  <exec_depend>python3-trimesh-pip</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
